fix(css): wrong font stack

--- a/_app/assets/_scss/_variables.scss
+++ b/_app/assets/_scss/_variables.scss
@@ -24,7 +24,7 @@ $code-color: #af9625;
 }
 
 .of-sf-pro-display {
-  font-family: 'of-sf-pro-display', var(--fontstack-monospace);
+  font-family: 'of-sf-pro-display', var(--fontstack-sans-serif);
 }
 
 // @font-face {
@@ -35,7 +35,7 @@ $code-color: #af9625;
 // }
 
 // .of-sf-pro-text {
-//   font-family: 'of-sf-pro-text', var(--fontstack-monospace);
+//   font-family: 'of-sf-pro-text', var(--fontstack-sans-serif);
 // }
 
 // @font-face {
@@ -46,7 +46,7 @@ $code-color: #af9625;
 // }
 
 // .of-sf-ui-display {
-//   font-family: 'of-sf-ui-display', var(--fontstack-monospace);
+//   font-family: 'of-sf-ui-display', var(--fontstack-sans-serif);
 // }
 
 @font-face {
@@ -57,7 +57,7 @@ $code-color: #af9625;
 }
 
 .of-arial {
-  font-family: 'of-arial', var(--fontstack-monospace);
+  font-family: 'of-arial', var(--fontstack-sans-serif);
 }
 
 @font-face {
